# FIRST-TOUCH-SCHOOL

./: CMakeLists.txt  Readme.md  app.mod  architect.arc  build.bat  cloud.arc  configexample.txt  extracodecheck.text  folderstructure.txt  result.arc  result.drawio  result.xml  switch.arc
config/: config.ini
database/: database.txt  save.db
docs/: ProjectDocumentation.docx  ~$ojectDocumentation.docx
src/: key.c  main.cpp
src/database/: ClassDataSeeder.cpp  ClassDataSeeder.h  ClassTableInitializer.cpp  ClassTableInitializer.h  DatabaseInitializer.cpp  DatabaseInitializer.h  DatabaseManager.cpp  DatabaseManager.h  FeesTableInitializer.cpp  FeesTableInitializer.h  StudentTableInitializer.cpp  StudentTableInitializer.h  TeacherTableInitializer.cpp  TeacherTableInitializer.h  UserTableInitializer.cpp  UserTableInitializer.h
src/models/: Class.h  Fees.h  Student.h  Teacher.h  User.h
src/repositories/: ClassRepository.cpp  ClassRepository.h  FeesRepository.cpp  FeesRepository.h  StudentRepository.cpp  StudentRepository.h  TeacherRepository.cpp  TeacherRepository.h  UserRepository.cpp  UserRepository.h
src/utils/: PasswordUtils.cpp  PasswordUtils.h
src/widgets/class/: ClassActionBarWidget.cpp  ClassActionBarWidget.h  ClassCardWidget.cpp  ClassCardWidget.h  ClassDetailsWidget.cpp  ClassDetailsWidget.h  ClassStudentTableWidget.cpp  ClassStudentTableWidget.h  ClassWidget.cpp  ClassWidget.h
src/widgets/dashboard/: HeaderWidget.cpp  HeaderWidget.h  MainSectionWidget.cpp  MainSectionWidget.h  SidebarWidget.cpp  SidebarWidget.h
src/widgets/fees/: FeesWidget.cpp  FeesWidget.h  FessWidget.h
src/widgets/students/: StudentProfileWidget.cpp  StudentProfileWidget.h  StudentsWidget.cpp  StudentsWidget.h
src/widgets/teachers/: TeachersWidget.cpp  TeachersWidget.h
src/windows/: DashboardWindow.cpp  DashboardWindow.h  LoginWindow.cpp  LoginWindow.h  SetupWindow.cpp  SetupWindow.h  SystemDashboard.cpp  SystemDashboard.h  WelcomeWindow.cpp  WelcomeWindow.h
